--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 				<h2><i class="fas fa-graduation-cap"></i> Formation</h2>
 				<div class="surline"></div>
 				<div class="row">
-					<div class="col3">
+					<div class="col3 col">
 						<p><i class="far fa-dot-circle"></i> Depuis 2020 À distance </p>
 					</div>
-					<div class="col7">
+					<div class="col7 col">
 						<h3> Openclassooms</h3>
 						<p> Formation en développement</p>
 						<p>Le développeur web est indispensable dans une équipe de développement. L'informatique n'a aucun secret pour lui et il a pour mission de donner vie aux maquettes visuelles d'un site ou d’une application web. Le développeur web doit traduire, en langage web, ses recommandations graphiques en rédigeant du code HTML, CSS, mais aussi JavaScript. Il est chargé de :
@@ -82,10 +82,10 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col3">
+					<div class="col3 col">
 						<p><i class="fas fa-circle"></i> 2017-2018 Arpajon </p>
 					</div>
-					<div class="col7">
+					<div class="col7 col">
 						<h3> Lycée Edmond michelet</h3>
 						<p> Bac sti2d option EE (DIPLÔME NON OBTENUE)</p>
 					</div>
@@ -96,10 +96,10 @@
 			    <h2><i class="fas fa-briefcase"></i> Experiences</h2>
 			    <div class="surline"></div>
 			    <div class="row">
-					<div class="col3">
+					<div class="col3 col">
 						<p><i class="far fa-dot-circle"></i> Novembre 2017- Décembre 2019 Fleury-mérogis</p>
 					</div>
-					<div class="col7">
+					<div class="col7 col">
 						<h3>Brico dépôt</h3>
 						<p>Vendeur Bois panneaux</p>
 						<p>Chargé de remplir les rayons, Effectuer des devis client (Cuisine, dressing, OSB et autres produits du rayon ), Mise en place des produits d’arrivage et leurs organisation, Chargé des services après vente en cas de produits défectueux ou casse, passer les commandes aux fournisseurs.
@@ -107,40 +107,40 @@
 					</div>
 			    </div>
                 <div class="row">
-                  	<div class="col3">
+                  	<div class="col3 col">
                         <p><i class="fas fa-circle"></i> Octobre 2017(2semaines) Epinay sur orge</p>
                   	</div>
-                  	<div class="col7">
+                  	<div class="col7 col">
                   		 <h3> Mc donald's</h3>
                   		 <p>Équipier polyvalent </p>
                   		 <p> En tant qu'équipier polyvalent, j'avais plusieurs mission que je devais méner a bien selon le planning afficher par les responsable. Tout d'abord, la préparation des sandwish, la préparations des viandes sur un grill, la préparations des aliments a frire(frites, nuggets...), ainsi que l'élaborations des commandes clients, c'est à dire reception des sandwishs et préparation des boissons.
                   	</div>
                 </div>
                 <div class="row">
-					 <div class="col3">
+					 <div class="col3 col">
 						 <p><i class="fas fa-circle"></i> Juillet 2017-Août 2017 Paris</p>
 					 </div>
-					 <div class="col7">
+					 <div class="col7 col">
 						 <h3> DILA</h3>
 						 <p>Saisonnier Bâtiments Logistique de sécurité</p>
 						 <p> Un job d'été qui avait pour but d'entretenir les locaux de l'entreprise ainsi que la proprété de la cour extérieure.</p>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col3">
+					<div class="col3 col">
 						<p><i class="fas fa-circle"></i> Juillet 2016-Août 2016 Paris</p>
 					</div>
-					<div class="col7">
+					<div class="col7 col">
 						<h3>DILA</h3>
 						<p>Saisonnier Bâtiments Logistique de sécurité</p>
 						<p> Un job d'été qui avait pour but d'entretenir les locaux de l'entreprise ainsi que la proprété de la cour extérieure.</p>
 					</div>
 			    </div>
 			    <div class="row">
-			    	<div class="col3">
+			    	<div class="col3 col">
 			    		<p><i class="fas fa-circle"></i> Juin 2015-Juillet 2015 Guibeville</p>
 			    	</div>
-			    	<div class="col7">
+			    	<div class="col7 col">
 			    		<h3> STU</h3>
 			    		<p>Manutentionnaire</p>
 			    		<p> Ce job consister, à la livraison de matériels scolaire (école élémentaire ou collège), c'est à dire: 
@@ -158,13 +158,13 @@
 				         <h2><i class="fas fa-pencil-alt"></i> Recommandations</h2>
 				         <div class="surline"></div>
 				         <div class="row">
-				         	 <div class="col2">
+				         	 <div class="col2 col">
 				         	 	<h4>  Richard Ngu Leubou</h4>
 				         	 	<p>Directeur: Entreprise</p>
 				         	 	<p>Telephone </p>
 				         	 	<p>Email: name@email.com </p>
 				         	</div>
-				         	<div class="col8">
+				         	<div class="col8 col">
 				         		<h4>Didier Fournier</h4>
 				         		<p>Directeur: Entreprise</p>
 				         		<p>Telephone</p>
