--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<title>projet 2</title>
 	    <meta charset="utf-8" />  
@@ -17,9 +17,9 @@
   	<div class="container">
   		<aside class="left">
 			<div class="photo">
-				<img src="karma.jpeg" class="avatar">
+				<img src="karma.jpeg"  alt="Ma photo CV" class="avatar">
 				<header class="title-sm">
-					<h1> <em>Fournier</em> Alan</h1>
+					<h1> <span class="color_title">Fournier Alan</span></h1>
 					<p class="work"> Developpeur web freelance</p>
 					
 				</header>
