--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div class="aproposdemoi">
 			    <h2 class="title_left">À propos de moi</h2>
 			    <p>
-			    Je me présente je m'appelle, Alan, j'ai 22 ans. Je suis une personne à l'écoute, qui s'adapte aux taches que l'on peux me confier, débordant d'ambition,je cherche a me préparer pour chaque éventualité, toutes expériences est bonne à prendre, l'expérience que j'ai acquis au fil de ces deux dernière années en tant que vendeur, me permet aujourd'hui des initiatives au près de l'entreprise qui m'emploie. je suis actuellement en formation a distance sur un parcour de developpeur web et souhaite devenir expert dans ce domaine qui me passione.
+			    Je me présente je m'appelle, Alan, j'ai 22 ans. Je suis une personne à l'écoute, qui s'adapte aux taches que l'on peut me confier, débordant d'ambition, je cherche à me préparer pour chaque éventualité, toutes expériences est bonne à prendre, l'expérience que j'ai acquise au fil de ces deux dernières années en tant que vendeur, me mettent aujourd'hui des initiatives auprès de l'entreprise qui m'emploie. je suis actuellement en formation à distance sur un parcours de développeur web et souhaite devenir expert dans ce domaine qui me passionne.
 			    </p>
 			</div>
 			<div class="loisirs">
@@ -102,7 +102,7 @@
 					<div class="col7 col">
 						<h3>Brico dépôt</h3>
 						<p>Vendeur Bois panneaux</p>
-						<p>Chargé de remplir les rayons, Effectuer des devis client (Cuisine, dressing, OSB et autres produits du rayon ), Mise en place des produits d’arrivage et leurs organisation, Chargé des services après vente en cas de produits défectueux ou casse, passer les commandes aux fournisseurs.
+						<p>Chargé de remplir les rayons, Effectuer des devis client (Cuisine, dressing, OSB et autres produits du rayon), Mise en place des produits d’arrivage et leurs organisations, Chargé des services après-vente en cas de produits défectueux où casse, passer les commandes aux fournisseurs.
                         </p>
 					</div>
 			    </div>
@@ -113,7 +113,7 @@
                   	<div class="col7 col">
                   		 <h3> Mc donald's</h3>
                   		 <p>Équipier polyvalent </p>
-                  		 <p> En tant qu'équipier polyvalent, j'avais plusieurs mission que je devais méner a bien selon le planning afficher par les responsable. Tout d'abord, la préparation des sandwish, la préparations des viandes sur un grill, la préparations des aliments a frire(frites, nuggets...), ainsi que l'élaborations des commandes clients, c'est à dire reception des sandwishs et préparation des boissons.
+                  		 <p> En tant qu'équipier polyvalent, j'avais plusieurs missions que je devais mener à bien selon le planning afficher par les responsables. Tout d'abord, la préparation des sandwichs, la préparation des viandes sur un gril, la préparation des aliments à frire(frites, nuggets...), ainsi que l'élaboration des commandes clients, c'est-à-dire réception des sandwichs et préparation des boissons.</p>
                   	</div>
                 </div>
                 <div class="row">
@@ -143,11 +143,11 @@
 			    	<div class="col7 col">
 			    		<h3> STU</h3>
 			    		<p>Manutentionnaire</p>
-			    		<p> Ce job consister, à la livraison de matériels scolaire (école élémentaire ou collège), c'est à dire: 
-			    			- Réception de la marchandise
-			    			- Décharger la marchandise
-			    			- Faire le montage des éléments 
-			    			- Placer les élements dans les salles prévu à cette effet.
+			    		<p> Ce job consisté, à la livraison de matériels scolaires (école élémentaire ou collège), c'est-à-dire: 
+			    			- réception de la marchandise 
+			    			- Décharger la marchandise 
+			    			- faire le montage des éléments
+			    			- Placer les éléments dans les salles prévues à cet effet.
 			    		</p>
 			    	</div>
 			    </div>
@@ -168,7 +168,7 @@
 				         		<h4>Didier Fournier</h4>
 				         		<p>Directeur: Entreprise</p>
 				         		<p>Telephone</p>
-				         		<p>email: name@email.com</p>
+				         		<p>Email: name@email.com</p>
 				         	</div>
 				         </div>
 			         </div>
