modif de la mise en page

--- a/index.html
+++ b/index.html
@@ -26,16 +26,11 @@
 			</div>
 			<div class="contact">
 				<h2 class="title_left">Contact</h2>
-				<p>Adresse</p>
-				<p>Essonne, France</p>
-				<p>Telephone</p>
-				<p>0782911738</p>
-				<p>Email</p>
-				<p>alanfrnrpro@gmail.com</p>
-				<p>Site Web</p>
-				<p>https://survivoraf.github.io/CV-AF/</p>
-				<p>skype</p>
-				<p>monskype.skype</p> 
+				<p>Adresse <br/>Essonne, France</p>
+				<p>Telephone <br/>0782911738 </p>
+				<p>Email <br/>alanfrnrpro@gmail.com</p>
+				<p>Site Web <br/>https://survivoraf.github.io/CV-AF/</p>
+				<p>skype <br/>monskype.skype</p>
             </div>
 			<div class="aproposdemoi">
 			    <h2 class="title_left">À propos de moi</h2>
@@ -64,7 +59,10 @@
 				<div class="surline"></div>
 				<div class="row">
 					<div class="col3 col">
-						<p><i class="far fa-dot-circle"></i> Depuis 2020 À distance </p>
+						<div class="row">
+						     <p class="icone_right"><i class="far fa-dot-circle"></i></p>
+						     <p> Depuis 2020 À distance </p>
+					    </div>
 					</div>
 					<div class="col7 col">
 						<h3> Openclassooms</h3>
@@ -83,7 +81,11 @@
 				</div>
 				<div class="row">
 					<div class="col3 col">
-						<p><i class="fas fa-circle"></i> 2017-2018 Arpajon </p>
+						<div class="row">
+							<p class="icone_right"><i class="fas fa-circle"></i></p>
+                            <p> 2017-2018 Arpajon </p>
+						</div>
+						
 					</div>
 					<div class="col7 col">
 						<h3> Lycée Edmond michelet</h3>
@@ -97,7 +99,11 @@
 			    <div class="surline"></div>
 			    <div class="row">
 					<div class="col3 col">
-						<p><i class="far fa-dot-circle"></i> Novembre 2017- Décembre 2019 Fleury-mérogis</p>
+						<div class="row">
+							<p class="icone_right"><i class="far fa-dot-circle"></i></p>
+							<p> Novembre 2017- Décembre 2019 Fleury-mérogis </p>
+						</div>
+						
 					</div>
 					<div class="col7 col">
 						<h3>Brico dépôt</h3>
@@ -108,7 +114,10 @@
 			    </div>
                 <div class="row">
                   	<div class="col3 col">
-                        <p><i class="fas fa-circle"></i> Octobre 2017(2semaines) Epinay sur orge</p>
+                  		<div class="row">
+                            <p class="icone_right"><i class="fas fa-circle"></i></p>
+                            <p> Octobre 2017(2semaines) Epinay sur orge</p>
+                        </div>
                   	</div>
                   	<div class="col7 col">
                   		 <h3> Mc donald's</h3>
@@ -118,7 +127,10 @@
                 </div>
                 <div class="row">
 					 <div class="col3 col">
-						 <p><i class="fas fa-circle"></i> Juillet 2017-Août 2017 Paris</p>
+					 	<div class="row">
+						   <p class="icone_right"><i class="fas fa-circle"></i> </p>
+						   <p>Juillet 2017-Août 2017 Paris</p>
+						</div> 
 					 </div>
 					 <div class="col7 col">
 						 <h3> DILA</h3>
@@ -128,7 +140,10 @@
 				</div>
 				<div class="row">
 					<div class="col3 col">
-						<p><i class="fas fa-circle"></i> Juillet 2016-Août 2016 Paris</p>
+						<div class="row">
+						   <p class="icone_right"><i class="fas fa-circle"></i></p>
+						   <p> Juillet 2016-Août 2016 Paris</p>
+						</div>
 					</div>
 					<div class="col7 col">
 						<h3>DILA</h3>
@@ -138,7 +153,10 @@
 			    </div>
 			    <div class="row">
 			    	<div class="col3 col">
-			    		<p><i class="fas fa-circle"></i> Juin 2015-Juillet 2015 Guibeville</p>
+			    		<div class="row">
+			    		    <p class="icone_right"><i class="fas fa-circle"></i></p>
+			    		    <p> Juin 2015-Juillet 2015 Guibeville</p>
+			    		</div>
 			    	</div>
 			    	<div class="col7 col">
 			    		<h3> STU</h3>
